updated the index.html

--- a/project/src/main/webapp/index.html
+++ b/project/src/main/webapp/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Welcome to Continous Integration with Jenkins in AWS Yottabyte session</title>
+    <title>Welcome to Continous Integration with Jenkins in Google could by jaganmohanreddy a</title>
   </head>
   <body bgcolor=white>
 
